Fix some z-indexes so text is above pictures.

--- a/src/components/Splash/Splash.module.scss
+++ b/src/components/Splash/Splash.module.scss
@@ -54,6 +54,7 @@
     text-align: left;
     align-items: flex-start;
     flex-direction: column;
+    z-index: 1;
 }
 
 .Right {
