--- a/src/pages/LandingPage/LandingPage.module.scss
+++ b/src/pages/LandingPage/LandingPage.module.scss
@@ -110,6 +110,7 @@
 
 .CardText {
 	width: 242px;
+	z-index: 1;
 }
 
 .LearnMore {
